# gmail-sdk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/gmail_sdk/: __init__.py  attachments.py  auth.py  client.py  convenience.py  drafts.py  filters.py  history.py  labels.py  messages.py  mime_utils.py  settings.py  threads.py
tests/: conftest.py  test_auth.py  test_client.py  test_convenience.py  test_history.py  test_labels.py  test_messages.py  test_mime.py  test_profile.py  test_threads.py
